[gd_scene load_steps=17 format=3 uid="uid://b4ek6k08equiw"]

[ext_resource type="FontFile" uid="uid://bq1l0b67iwc20" path="res://Font/ProtestStrike-Regular.ttf" id="1_e4cjr"]
[ext_resource type="Script" path="res://Scripts/Menus/PauseMenu.gd" id="1_h57b1"]
[ext_resource type="Script" path="res://Scripts/Menus/BackButton.gd" id="2_jvspv"]
[ext_resource type="Script" path="res://Scripts/Menus/ResumeButton.gd" id="2_oagun"]
[ext_resource type="Script" path="res://Scripts/Menus/RestartButton.gd" id="3_ylnba"]
[ext_resource type="Script" path="res://Scripts/Menus/SettingsButtonInGame.gd" id="5_qyyra"]
[ext_resource type="Script" path="res://Scripts/Menus/InGameSettings.gd" id="6_fvg4j"]
[ext_resource type="Script" path="res://Scripts/Menus/BackButtonSettingsInGame.gd" id="8_56vhi"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_keuc2"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3hqm6"]
bg_color = Color(0.027451, 0, 0.0784314, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1

[sub_resource type="Theme" id="Theme_bupt1"]
default_font = ExtResource("1_e4cjr")
default_font_size = 80
Button/styles/hover = SubResource("StyleBoxFlat_keuc2")
Button/styles/normal = SubResource("StyleBoxFlat_3hqm6")

[sub_resource type="Theme" id="Theme_v87t4"]
default_font = ExtResource("1_e4cjr")
default_font_size = 35

[sub_resource type="Theme" id="Theme_6hj4c"]
default_font = ExtResource("1_e4cjr")
default_font_size = 100

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pepnj"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_spdv8"]
bg_color = Color(0.027451, 0, 0.0784314, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1

[sub_resource type="Theme" id="Theme_xgljn"]
default_font = ExtResource("1_e4cjr")
default_font_size = 80
Button/styles/hover = SubResource("StyleBoxFlat_pepnj")
Button/styles/normal = SubResource("StyleBoxFlat_spdv8")

[node name="CanvasLayer" type="CanvasLayer"]

[node name="PauseMenu" type="Control" parent="."]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_h57b1")

[node name="Panel" type="Panel" parent="PauseMenu"]
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu/Panel"]
custom_minimum_size = Vector2(200, 800)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -323.5
offset_top = -400.0
offset_right = 323.5
offset_bottom = 400.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 2
metadata/_edit_group_ = true

[node name="ResumeButton" type="Button" parent="PauseMenu/Panel/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_bupt1")
text = "Resume"
script = ExtResource("2_oagun")

[node name="Restart" type="Button" parent="PauseMenu/Panel/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_bupt1")
text = "Restart"
script = ExtResource("3_ylnba")

[node name="Settings" type="Button" parent="PauseMenu/Panel/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_bupt1")
text = "Settings"
script = ExtResource("5_qyyra")

[node name="BackToMainMenu" type="Button" parent="PauseMenu/Panel/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_bupt1")
text = "Exit"
script = ExtResource("2_jvspv")

[node name="Label2" type="Label" parent="PauseMenu/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -476.0
offset_right = 476.0
offset_bottom = 312.0
grow_horizontal = 2
theme = SubResource("Theme_v87t4")
theme_override_font_sizes/font_size = 80
text = "PAUSED"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 35.0
offset_top = -111.0
offset_right = 328.0
offset_bottom = 111.0
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "Controls:

[E] - interact
[F] - toggle flashlight
[Shift] - run"

[node name="Label2" type="Label" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -463.0
offset_top = -111.0
offset_right = -20.0
offset_bottom = 111.0
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "Mission:
-Replace batteries.
-Run away from Jerry.
-Go Home"

[node name="Settings" type="Control" parent="."]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("6_fvg4j")

[node name="ColorRect" type="ColorRect" parent="Settings"]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0.219608, 0.219608, 0.219608, 1)

[node name="Panel" type="Panel" parent="Settings/ColorRect"]
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Settings/ColorRect/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -368.5
offset_top = -514.0
offset_right = 368.5
offset_bottom = -303.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_6hj4c")
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Settings/ColorRect/Panel"]
custom_minimum_size = Vector2(200, 800)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 28.0
offset_top = -364.0
offset_right = 429.0
offset_bottom = 436.0
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 2
metadata/_edit_group_ = true

[node name="BackButton" type="Button" parent="Settings/ColorRect/Panel/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_xgljn")
text = "Back
"
script = ExtResource("8_56vhi")

[node name="VBoxContainer2" type="VBoxContainer" parent="Settings/ColorRect/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -284.5
offset_top = -300.5
offset_right = 284.5
offset_bottom = 300.5
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_group_ = true

[node name="Master" type="Label" parent="Settings/ColorRect/Panel/VBoxContainer2"]
layout_mode = 2
theme = SubResource("Theme_6hj4c")
theme_override_font_sizes/font_size = 70
text = "Master"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Master2" type="HSlider" parent="Settings/ColorRect/Panel/VBoxContainer2" groups=["MasterSetting"]]
layout_mode = 2
min_value = -30.0
max_value = 0.0

[node name="Music" type="Label" parent="Settings/ColorRect/Panel/VBoxContainer2"]
layout_mode = 2
theme = SubResource("Theme_6hj4c")
theme_override_font_sizes/font_size = 70
text = "Music"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Music2" type="HSlider" parent="Settings/ColorRect/Panel/VBoxContainer2" groups=["MusicSetting"]]
layout_mode = 2
min_value = -30.0
max_value = 0.0

[node name="SFX" type="Label" parent="Settings/ColorRect/Panel/VBoxContainer2"]
layout_mode = 2
theme = SubResource("Theme_6hj4c")
theme_override_font_sizes/font_size = 70
text = "SFX"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SFX2" type="HSlider" parent="Settings/ColorRect/Panel/VBoxContainer2" groups=["SFXSetting"]]
layout_mode = 2
min_value = -30.0
max_value = 0.0

[connection signal="visibility_changed" from="PauseMenu" to="PauseMenu" method="_on_visibility_changed"]
[connection signal="button_up" from="PauseMenu/Panel/VBoxContainer/ResumeButton" to="PauseMenu" method="_on_resume_button_button_up"]
[connection signal="button_up" from="PauseMenu/Panel/VBoxContainer/Restart" to="PauseMenu/Panel/VBoxContainer/Restart" method="_on_button_up"]
[connection signal="button_up" from="PauseMenu/Panel/VBoxContainer/Settings" to="PauseMenu/Panel/VBoxContainer/Settings" method="_on_button_up"]
[connection signal="button_up" from="PauseMenu/Panel/VBoxContainer/BackToMainMenu" to="PauseMenu/Panel/VBoxContainer/BackToMainMenu" method="_on_button_up"]
[connection signal="pressed" from="Settings/ColorRect/Panel/VBoxContainer/BackButton" to="Settings" method="_on_back_button_pressed"]
[connection signal="pressed" from="Settings/ColorRect/Panel/VBoxContainer/BackButton" to="Settings/ColorRect/Panel/VBoxContainer/BackButton" method="_on_pressed"]
[connection signal="drag_ended" from="Settings/ColorRect/Panel/VBoxContainer2/Master2" to="Settings" method="_on_master_2_drag_ended"]
[connection signal="value_changed" from="Settings/ColorRect/Panel/VBoxContainer2/Master2" to="Settings" method="_on_master_2_value_changed"]
[connection signal="drag_ended" from="Settings/ColorRect/Panel/VBoxContainer2/Music2" to="Settings" method="_on_music_2_drag_ended"]
[connection signal="value_changed" from="Settings/ColorRect/Panel/VBoxContainer2/Music2" to="Settings" method="_on_music_2_value_changed"]
[connection signal="drag_ended" from="Settings/ColorRect/Panel/VBoxContainer2/SFX2" to="Settings" method="_on_sfx_2_drag_ended"]
[connection signal="value_changed" from="Settings/ColorRect/Panel/VBoxContainer2/SFX2" to="Settings" method="_on_sfx_2_value_changed"]
